--- a/Panel_part3.qmd
+++ b/Panel_part3.qmd
@@ -37,9 +37,9 @@ sessionInfo()
   
 ### Load data
 
-For the purpose of this exercise, we will use a real-world data set. However, instead of constructing our own data, we use a shortcut and use data from the replication package of @Hospido.2012. The replication package can be found [here](http://qed.econ.queensu.ca/jae/datasets/hospido001/).
+For the purpose of this exercise, we will use a real-world data set. Instead of constructing our own data, we use a shortcut and use data from the replication package of @Hospido.2012. The replication package can be found [here](http://qed.econ.queensu.ca/jae/datasets/hospido001/).
 
-This is an unbalanced panel with 32,066 observations and 2066 individuals for the period 1968–1993 of the PSID. It consists of male heads aged 25–55 with at least 9 years of usable wages data.
+This is an unbalanced panel with 32,066 observations and 2066 individuals for the period 1968–1993 of the PSID. It consists of male household heads aged 25–55 with at least 9 years of usable wages data.
 
 
 ```{r}
@@ -91,14 +91,32 @@ data.df <- data.df[order(data.df$pid, data.df$year), ]
 
 
 
+
 # Exercise 1
 
 Download and load the data. 
 
-Can we use this dataset to replicate our earlier analysis on the marital wage premium? What might be a problem here?
+Have a look at the data. 
+
+ * How many observations do we have in 1968? How many in 1990?
+
+
+ * What is the average age in 1968? What was it in 1984? And how is this possible?
+
+
+ * At which age did individual with ID "5790002" become father?
 
 
 # Exercise 2
+
+Just to play a little bit around with the data, let us estimate some models.
+
+* What is the correlation between age and wage? Please use different estimators to determine different types of correlations.
+
+
+# Exercise 3
+
+Can we use this dataset to replicate our earlier analysis on the marital wage premium? What might be a problem here? (tip: have a look a the marriage variable).
 
 However, we do something similar: We want to investigate if there is a fatherhood wage premium? In other words, do men experience an increase in wages when they become fathers?
 
@@ -139,7 +157,7 @@ __Note: this feels like dropping a lot of information! However, it makes sense i
    * Try to perform a placebo test: what happens if you use the "lead" of becoming father. Why is this an interesting test?
    
 
-# Exercise 3
+# Exercise 4
 
 Can we use one of the new event-study approaches, such as the Callaway and SantAnna estimator?
 
